--- a/browser/sass/main.sass
+++ b/browser/sass/main.sass
@@ -17,9 +17,6 @@
 #size-selector
   float: left
 
-  *
-    display: inline-block
-
   select
     -webkit-appearance: none
     background: white
@@ -29,5 +26,14 @@
 #config
   clear: both
 
+  *
+    display: inline-block
+
 #upload
   float: right
+
+  p
+    padding-right: 30px
+
+  input[type='file']
+    width: 300px
