--- a/browser/style.css
+++ b/browser/style.css
@@ -63,7 +63,6 @@ video {
 
  canvas {
       margin-top: 3px;
-      width: 80%;
     }
     
 /**
@@ -378,7 +377,7 @@ main {
   min-height: 500px; }
 
 .wrapper {
-  max-width: 95%;
+  max-width: 80%;
   margin-left: auto;
   margin-right: auto; }
   .wrapper::after {
@@ -444,7 +443,20 @@ main {
   #upload input[type='file'] {
     width: 300px; }
 
-form {
+main>form {
   text-align: center;
 }
+
+input {
+  margin: 1em;
+}
+
+#matrix1 {
+  max-width: 80%;
+}
+
+/*.NoteSelecter {
+  display: inline-block;
+  max-width: 18%;
+}*/
 /*# sourceMappingURL=style.css.map */
